packages/build/tests/error/fixtures/early_exit/plugin.js
import { env, pid } from 'process'

export default {
  onPreBuild() {
    env.TEST_PID = pid
  },
  onPostBuild() {},
}
